--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="ja">
   <!-- Author : bonji@mikuro.net (Shuji Narumi) 
     start: 4/28
-    total: 10h last 5/2
+    total: 12h last 5/5
     Completion : 5/10
   -->
   <!--
     1. CSS定義用の雛形のHMTLを作る           4/28
     2. CSS定義(@media print A4, B5)       5/1
     3. JS 要素生成のロジックを考え決める(MVC?) 5/1
-    4. JS オブジェクト定義                  5/2
-    5. JS コーディング                     5/2
-    6. テスト                             5/2
-    7. CSS定義(スマートフォン対応)           5/3
-    8. GitHub Pagesへ実装、GitHubコード公開 5/4
-    9. Qiitaへ記事投稿                      4/5
-    10. ポートフォリオ用詳細ページ作成         5/6
-    11. ポートフォリオへ反映                 5/6
+    4. JS オブジェクト定義                  5/5
+    5. JS コーディング                     5/5,5/6
+    6. テスト                             5/6
+    7. CSS定義(スマートフォン対応)           5/7
+    8. GitHub Pagesへ実装、GitHubコード公開 5/8
+    9. Qiitaへ記事投稿                      4/8
+    10. ポートフォリオ用詳細ページ作成         5/9
+    11. ポートフォリオへ反映                 5/9
   -->
 <head>
   <meta charset="UTF-8">
