--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     8. Qiitaへ記事投稿                      4/8
     9. ポートフォリオ用詳細ページ作成         5/9
     10. ポートフォリオへ反映                 5/9
-    11. CSS定義(スマートフォン対応)           5/11
+    11. viewを100%,150%,50%,画面に合わせるに選択可能
+    12. スマートフォン対応
   -->
 <head>
   <meta charset="UTF-8">
