image load function add

--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
     8. Qiitaへ記事投稿                      4/8
     9. ポートフォリオ用詳細ページ作成         5/9
     10. ポートフォリオへ反映                 5/9
-    11. viewを100%,150%,50%,画面に合わせるに選択可能
-    12. スマートフォン対応
+    11. 実装                               5/9
+    12. viewを100%,150%,50%,画面に合わせるに選択可能
+    13. スマートフォン対応
   -->
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>履歴書（CSS定義用）</title>
+  <title>履歴書 Editor</title>
   <link rel="stylesheet" href="css/style.css">
   <script src="js/main.js"></script>
 </head>
