--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </label>
           <!-- ドラックアンドドロップ + ＋ -->
           <!-- TODO:画像データはBase64のインラインイメージか？ 別ファイルで参照にするか？ -->
-        </section><!-- /#id-photo -->
+        </section><!-- /.id-photo -->
   
         <section class="personal-data">
           <div class="basic-data">
