--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   -->
   <!--
     TODO:
+    5. 入力フォーカスした時に、全選択する      5/10
     6. print機能                           5/10
     8. ヘルプ表示                           5/10
     9. SCSSリファクタリング                 5/11
