--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="ja">
   <!-- Author : bonji@mikuro.net (Shuji Narumi) 
     start: 2021/4/28
-    total: 32h last 2021/5/11
-    Completion : 2021/5/10
+    total: 36h last 2021/5/13
+    Completion : 2021/5/14
   -->
   <!--
     TODO:
     1.1 print-size　初回load時に初期を与えること
     1.2 help close
     1.3 doneでもid-photoを削除できる
+    1.4 close button廃止してWindow: beforeunload イベントで実装
     2.  font指定
     3.  SCSSリファクタリング                 5/13
         Firefox、Safari
