--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     start: 2021/4/28
     total: 36h last 2021/5/13
     Completion : 2021/5/14
+    Version: 0.9
   -->
   <!--
     TODO:
-    1.1 print-size　初回load時に初期を与えること
-    1.2 help close
-    1.3 doneでもid-photoを削除できる
-    1.4 close button廃止してWindow: beforeunload イベントで実装
-    2.  font指定
     3.  SCSSリファクタリング                 5/13
         Firefox、Safari
+    1.1 print-size　初回load時に初期値を与えること
+    1.2 help close button
+    1.3 print digalog closeでバグ
+    1.4 doneでもid-photoを削除できるバグ
+    1.5 close button廃止してWindow: beforeunload イベントで実装
+    2.  font指定
+
     4.  ヘルプ表示                           5/13
 
     5.  HTML出力（
@@ -30,14 +33,14 @@
       
     10. GitHub Pagesへ実装、GitHubコード公開 5/13
     11. Qiitaへ記事投稿                      5/13
-    12. ポートフォリオ用詳細ページ作成         5/13
-    13. ポートフォリオへ反映                 5/13
+    12. ポートフォリオ用詳細ページ作成         5/14
+    13. ポートフォリオへ反映                 5/14
     14. viewを100%,150%,50%,画面に合わせるに選択可能
-    15 ドラックアンドドロップ（JSON, image）
+    15. ドラックアンドドロップ（JSON, image）
     16. スマートフォン対応
     17. ショーカットキー割り当て
     18. エクスポートファイル暗号化/インポートファイル複合化
-    10. 入力値のチェック
+    10. 入力値の制限及びチェック
   -->
 <head>
   <meta charset="UTF-8">
