--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>履歴書 Editor</title>
-  <link id="combines-styles" rel="stylesheet" href="css/style.css">
+  <link id="combines-styles" rel="stylesheet" href="css/main.css">
   <script src="js/main.js"></script>
 </head>
 <body>
@@ -79,7 +79,7 @@
         <option value="a4">A4(A4:2枚)</option>
       </select>
       <button id="printing">印刷</button>
-      <button id="dialog-close">キャンセル</button>
+      <button id="dialog-close">閉じる</button>
     </dialog>
   </header>
   <main>
