--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
     </div>
     <dialog id="print-dialog">
       <select name="" id="print-size" required>
-        <option value="b4">B5(見開きB4:1枚)</option>
-        <option value="b5">B5(B5:2枚)</option>
-        <option value="a3">A4(見開きA3:1枚)</option>
-        <option value="a4">A4(A4:2枚)</option>
+        <option value="b4">見開きB4:1枚</option>
+        <option value="b5">B5:2枚</option>
+        <option value="a3">見開きA3:1枚</option>
+        <option value="a4">A4:2枚</option>
       </select>
       <button id="printing">印刷</button>
       <button id="dialog-close">閉じる</button>
