--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
   -->
   <!--
     TODO:
-    3.  SCSSリファクタリング                 5/14
+    [5/14]
+    1.  SCSSリファクタリング
         Firefox、Safari
-    2.  font指定
-    4.  ヘルプ表示                           5/14
-
-    5.  HTML出力（
+    1.  SCSSA3、A4追加
+    2.  HTML出力（
       1.必要のない要素をremoveメソッドで削除
         document.querySelector('hote').remove();
       2.header要素など一部変更する
@@ -24,17 +23,22 @@
       7.html.outerHTMLでDOMStringとして出力
         document.querySelector('html').outerHTML;
       8.ファイル名を指定してhtmlファイルとして出力
-      
-    10. GitHub Pagesへ実装、GitHubコード公開 5/14
-    11. Qiitaへ記事投稿                      5/14
-    12. ポートフォリオ用詳細ページ作成         5/15
-    13. ポートフォリオへ反映                 5/15
-    14. viewを100%,150%,50%,画面に合わせるに選択可能
-    15. ドラックアンドドロップ（JSON, image）
-    16. スマートフォン対応
-    17. ショーカットキー割り当て
-    18. エクスポートファイル暗号化/インポートファイル複合化
-    10. 入力値の制限及びチェック
+    4.  ヘルプ表示
+    
+    [5/15]
+    1. GitHub Pagesへ実装、GitHubコード公開
+    2. Qiitaへ記事投稿
+    3. ポートフォリオ用詳細ページ作成
+    4. ポートフォリオへ反映
+
+    [未定]
+    1. TOPへスクロールを追加
+    2. viewを100%,150%,50%,画面に合わせるに選択可能
+    3. ドラックアンドドロップ（JSON, image）
+    4. スマートフォン対応
+    5. ショーカットキー割り当て
+    6. エクスポートファイル暗号化/インポートファイル複合化
+    7. 入力値の制限及びチェック
   -->
 <head>
   <meta charset="UTF-8">
