add htmlfile output function

--- a/index.html
+++ b/index.html
@@ -2,28 +2,14 @@
 <html lang="ja">
   <!-- Author : bonji@mikuro.net (Shuji Narumi) 
     start: 2021/4/28
-    total: 41h last 2021/5/14
-    Completion : 2021/5/14
-    Version: 0.9.1.1
+    total: 48h last 2021/5/15
+    Completion : 2021/5/15
+    Version: 0.9.8
   -->
   <!--
     TODO:
-    [5/14]
-    1.  SCSSリファクタリング
-        Firefox、Safari
-    1.  SCSSA3、A4追加
-    2.  HTML出力（
-      1.必要のない要素をremoveメソッドで削除
-        document.querySelector('hote').remove();
-      2.header要素など一部変更する
-      3.専用のCSSファイルを読み込みんで、style要素に入れ込み
-        header要素にそのstyle要素を追加する
-      4.html要素を取得する。
-        document.querySelector('html')
-      7.html.outerHTMLでDOMStringとして出力
-        document.querySelector('html').outerHTML;
-      8.ファイル名を指定してhtmlファイルとして出力
-    4.  ヘルプ表示
+    [5/15]
+    4. ヘルプ（help.html）
 
     [5/15]
     1. GitHub Pagesへ実装、GitHubコード公開
