help function add

--- a/index.html
+++ b/index.html
@@ -1,16 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <!-- Author : bonji@mikuro.net (Shuji Narumi) 
-    start: 2021/4/28
-    total: 48h last 2021/5/15
-    Completion : 2021/5/15
-    Version: 0.9.8
-  -->
   <!--
     TODO:
-    [5/15]
-    4. ヘルプ（help.html）
-
     [5/15]
     1. GitHub Pagesへ実装、GitHubコード公開
     2. Qiitaへ記事投稿
@@ -30,6 +21,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Shuji Narumi">
+  <meta description="resume editor, 履歴書を編集できるWebアプリです。">
+  <meta keywords="resume, 履歴書">
   <title>履歴書 Editor</title>
   <link id="combines-styles" rel="stylesheet" href="css/b4.css">
   <script src="js/main.js"></script>
