--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ja">
   <!--
     TODO:
-    [5/15]
+    [5/16]
+    0. help内容を記述
     1. GitHub Pagesへ実装、GitHubコード公開
     2. Qiitaへ記事投稿
     3. ポートフォリオ用詳細ページ作成
